SWOFF-215 fix detail fab display on tablets

--- a/softwrench.sW4.WebMobile/www/Content/Mobile/styles/_list.scss
+++ b/softwrench.sW4.WebMobile/www/Content/Mobile/styles/_list.scss
@@ -149,3 +149,9 @@ crud-icon {
     z-index: 99;
     position: absolute;
 }
+
+.composition.list {
+    .crud-list-icon {
+        top: 41px;
+    }
+}
